@startuml Class

class User {
  id: bigIntUnsigned
  email: string
  firstname: string
  lastname: string
  password: string
  roleId: foreignId
  isVerified: boolean
  isActive: boolean
  profilePicture: string
  registrationToken: string
  createdAt: datetime
  updatedAt: datetime

  registration()
  login()
  logout()
  forgotPassword()
  deleteAccount()
}

class Dev {
  id: bigIntUnsigned
  userId: foreignId
  description: string
  experience: int
  createdAt: datetime
  updatedAt: datetime
}

class Role {
  id: bigIntUnsigned
  name: string
  createdAt: datetime
  updatedAt: datetime
}

class Prestation {
  id: bigIntUnsigned
  name: string
  createdAt: datetime
  updatedAt: datetime
}

class DevPrestation {
  id: bigIntUnsigned
  dev_id: foreignId
  description: string
  prestation_id: foreignId
  price: int
  createdAt: datetime
  updatedAt: datetime
}

class DevStack {
  id: bigIntUnsigned
  dev_id: foreignId

}

class Stack {
  id: bigIntUnsigned
  name: string
  createdAt: datetime
  updatedAt: datetime
}

class ForgotPasswordToken {
  id: bigIntUnsigned
  user_id: foreignId
  token: string
  is_used: boolean
  createdAt: datetime
}

class Order {
  id: bigIntUnsigned
  client_id: foreignId
  dev_prestation_id: foreignId
  is_payed: boolean
  hasDeposit: boolean
  amountDeposit: float
  transaction_id: foreignId
  createdAt: datetime
  updatedAt: datetime
}

class Transaction {
  id: bigIntUnsigned
  order_id: foreignId
  number: int
  state: string
  createdAt: datetime
  updatedAt: datetime

}

class Review {
  id: bigIntUnsigned
  client_id: foreignId
  order_id: foreignId
  rating: int
  comment: string
  createdAt: datetime
  updatedAt: datetime
}

class Message {
  id: bigIntUnsigned
  fromUserId: foreignId
  toUserId: foreignId
  createdAt: datetime
  updatedAt: datetime
}

class Complaint {
    id: bigIntUnsigned
    userId: foreignId
    createdAt: datetime
    updatedAt: datetime
}

User "N " -- "1 " Role
User "1 " -- "N " ForgotPasswordToken
Order "0..N " -- "1..N " User
Transaction "1 " -- "1 " Order
Dev "1 " -- "0..1 " User
Dev "1 " -- "1..N " DevStack
DevStack "1 " -- "N " Stack
Review "1 " -- "0..N " User
Review "0..1 " -- "1 " Order
DevPrestation "1 " -- "N " Prestation
DevPrestation "N " -- "1 " Dev
User "1 " -- "0..N " Message
@enduml